<resources>
    <string name="app_name">Travelmantic</string>
    <string name="title_hint">Deal Title</string>
    <string name="price_hint">Price (numbers only)</string>
    <string name="description_hint">Description</string>
    <string name="save_menu">save</string>
    <string name="delete_deal">Delete Deal</string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="email">Email</string>
    <string name="first_and_last_name"><![CDATA[First & last name]]></string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="select_image">Select Image</string>
    <string name="image">image</string>
    <string name="firebase_database_name">traveldeals</string>
    <string name="string_with_placeholders">%1$s %2$s</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="manage_deals">Manage Deals</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="logout">Logout</string>
    <string name="deals">Deals</string>
</resources>
